Replace img and text email etape 2, Create email send to user

--- a/Artywiz/etape-2.html
+++ b/Artywiz/etape-2.html
@@ -74,7 +74,7 @@
                     </tr>
                     <tr>
                         <td bgcolor="#2D2D2D">
-                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1569388560/Email%20Launching/new-etape-2.png" alt="">
+                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1570090558/Email%20Launching/new-etape-2.png" alt="">
                         </td>
                     </tr>
                     <tr>
@@ -87,14 +87,6 @@
                                                 width: 260px;
                                                 margin: 15px 0 5px;
                                             " src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1567590127/Email%20Launching/logo-artywiz-animation.gif" alt="">
-                                            <p class="font-mobile" style="
-                                                margin: 0 0 40px;
-                                                color: #2d2d2d;
-                                                font-size: 1.25em;
-                                            ">
-                                                <b>Avec Artywiz Football, <br>
-                                                    réalisez vous-même toute la communication de votre club! </b>
-                                            </p>
                                             <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1568016844/Email%20Launching/illustration-player.png" alt="">
                                             <br><br>
                                         </center>
@@ -109,14 +101,17 @@
                                         ">
                                             <b>ARTYWIZ Football a été conçu pour vous faire gagner!</b>
                                             <br><br>
-                                            Non pas des matches, c’est du ressort de vos équipes, mais du temps (Artywiz est simple d’utilisation, et automatisé), de l’argent
-                                            (Artywiz est conçu pour intégrer vos sponsors sur tous les documents et développer les revenus du sponsoring), et une communication de qualité pour votre Club.
+                                            Non pas des matches, c’est du ressort de vos équipes, mais du temps (Artywiz est simple d’utilisation, et automatisé), de l’argent (Artywiz est conçu pour intégrer vos sponsors sur tous les documents et développer les revenus du sponsoring), et une communication de qualité pour votre Club.
                                             <br><br>
                                             Des modèles de documents personnalisables sont disponibles pour que vous puissiez – en quelques minutes – faires des annonces de Matchs, organiser des évènements ou lancer une nouvelle saison… en valorisant les sponsors du club sur chaque support de communication!
                                             <br><br>
                                             ARTYWIZ Football démarre en Septembre 2019, et intègre déjà une trentaine de documents prêts à être utilisés, qui seront complétés par d’autres modèles pour atteindre une cinquantaine d’ici à la fin de l’année.
                                             <br><br>
-                                            Pendant cette période, ARTYWIZ, La LGEF et GROUPAMA Grand-Est vous offrent un essai gratuit à ARTYWIZ Football, profitez-en! Au delà de cette période, à partir du premier janvier 2020, l’abonnement mensuel à ARTYWIZ Football sera de 12€ ttc par mois et par club.
+                                            Pendant cette période, ARTYWIZ, La LGEF et GROUPAMA Grand-Est vous offrent un essai gratuit (*) à ARTYWIZ Football, intégrant un accompagnement personnalisé… profitez-en!
+                                            <br>
+                                            Nous sommes à votre disposition par email et par téléphone si vous avez besoin d’aide dans la prise en main d’ARTYWIZ pour votre club.
+                                            <br><br>
+                                            (*) Au delà de cette période, à partir du premier janvier 2020, l’abonnement mensuel à ARTYWIZ Football sera de 12€ ttc par mois et par club.
                                         </p>
                                     </div>
                                     <div style="padding: 20px 25px;text-align: left; border-top: solid 1px #d0d0d0;">
@@ -197,21 +192,43 @@
                                             <b>COMMUNIQUER LES RÉSULTATS <br> 
                                                 DES MATCHS DE VOS ÉQUIPES</b>
                                         </p>
-                                        <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1569391464/Email%20Launching/illustration-goal.png" alt="" style="margin-bottom: 20px;">
+                                        <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1570090359/Email%20Launching/stadium.png" alt="" style="margin-bottom: 20px;">
                                     </center>
                                     <p class="font-mobile" style="
                                         color: #87929d;
                                         font-size: 1.188em;
                                         font-family: 'Roboto', sans-serif;
-                                        line-height: 1.92;
+                                        line-height: 150%;
                                         margin-top: 0;
                                         margin-bottom: 5px;
                                     ">
                                         Aujourd’hui, découvrez comment partager simplement les résultats des matchs de vos équipes:
                                         <br><br>
                                         Saisissez les détails du match, le score, les buteurs, puis choisissez les sponsors à valoriser… <br>
-                                        ARTYWIZ va automatiquement créer pour vous une série de documents prêts à être publiés sur les réseaux sociaux ou envoyés par mails… <br>
+                                        ARTYWIZ va automatiquement créer pour vous une série de documents prêts à être publiés sur les réseaux sociaux ou envoyés par mails… <br><br>
                                         Pour en savoir plus, visualisez notre démo ou connectez-vous pour passer à l’action!
+                                        <br><br>
+                                        <b>
+                                            Une question? besoin d’aide? <br>
+                                            Nous sommes là pour vous accompagner!
+                                        </b>
+                                        <br><br>
+                                    </p>
+                                    <hr style="border-color: #f5f5f5;border-width: 1px;"> <br>
+                                    <p class="font-mobile" style="
+                                        color: #87929d;
+                                        font-size: 1.188em;
+                                        font-family: 'Roboto', sans-serif;
+                                        line-height: 150%;
+                                        margin-top: 0;
+                                        margin-bottom: 5px;
+                                    ">
+                                        Contactez nous par email ou par téléphone :
+                                        <br><br>
+                                        Philippe <b>SEITER</b> <br><br>
+                                        <b>ARTYWIZ</b> <br>
+                                        philippe.seiter@artyplanet.com <br>
+                                        tél. +33 607 214 916
                                     </p>
                                 </div>
                             </center>
