Create new email etape 1
Create new email etape 1

--- a/LGEF/newsletter-1.html
+++ b/LGEF/newsletter-1.html
@@ -68,7 +68,7 @@
                 <table width="640" cellspacing="0" cellpadding="0" border="0" class="responsive-table" style="border: solid 1px #d0d0d0;">
                     <tr>
                         <td align="center" bgcolor="#fafafa">
-                            <div style="width: 570px;">
+                            <div style="margin: 0 34px;">
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0" class="responsive-table">
                                     <tr>
                                         <td>
@@ -108,7 +108,7 @@
                     </tr>
                     <tr>
                         <td align="center" bgcolor="#f0f0f0">
-                            <div style="width: 570px; padding-bottom: 20px;">
+                            <div style="margin: 0 34px 20px;">
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0" class="responsive-table" style="background: #fff;">
                                     <tr>
                                         <td style="padding: 25px; box-sizing: border-box;">
@@ -127,7 +127,7 @@
                     </tr>
                     <tr>
                         <td align="center" bgcolor="#f0f0f0">
-                            <div style="width: 570px; margin-bottom: 20px; background: #f8f8f8; padding: 40px 0;">
+                            <div style="margin: 0 34px 20px; background: #f8f8f8; padding: 40px 0;">
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0" class="responsive-table" style="padding: 10px 45px 40px;">
                                     <tr>
                                         <td style="padding: 25px; box-sizing: border-box;">
@@ -238,7 +238,7 @@
                     </tr>
                     <tr>
                         <td align="center" bgcolor="#f0f0f0">
-                            <div style="width: 570px; margin-bottom: 20px;">
+                            <div style="margin: 0 34px 20px;">
                                 <div style="padding: 20px 0; background: #fff;">
                                     <h4 style="text-transform: uppercase; margin: 7px 0 15px; font-family: 'Titillium Web', sans-serif; font-size: 26px; font-weight: bold; color: #444444;">Les partenaires de la LGEF</h4>
                                     <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1579749681/LGEF/grandest.png" alt="">
@@ -249,7 +249,7 @@
                     </tr>
                     <tr>
                         <td align="center" bgcolor="#f0f0f0">
-                            <div style="width: 570px; margin-top: 50px; margin-bottom: 20px;">
+                            <div style="margin: 50px 34px 20px;">
                                 <h3 style="line-height: 80%; margin: 0; text-transform: uppercase; font-family: 'Titillium Web', sans-serif; font-size: 24px; font-weight: bold; color: #7c7c7c;">accès direct</h3>
                                 <a href="#" style="font-family: 'Muli', sans-serif; font-size: 11px; font-weight: normal; color: #7c7c7c;">gérer mon club</a> -
                                 <a href="#" style="font-family: 'Muli', sans-serif; font-size: 11px; font-weight: normal; color: #7c7c7c;">formations</a> - 
@@ -262,7 +262,7 @@
                     </tr>
                     <tr>
                         <td align="center" bgcolor="#f0f0f0">
-                            <div style="width: 570px; margin: 50px 0;">
+                            <div style="margin: 50px 34px;">
                                 <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1579750834/LGEF/lgef-sponsor.png" alt="">
                                 <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1579750880/LGEF/groupama-sponsor.png" alt="" style="margin: 0 50px;">
                                 <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1579750881/LGEF/sportotal-sponsor.png" alt="">
