--- a/Artywiz/etape-1-new.html
+++ b/Artywiz/etape-1-new.html
@@ -154,14 +154,14 @@
                                         <tr>
                                             <td style="width: 22%;" align="left">
                                     <![endif]-->
-                                                <div style="display: inline-block; width:190px; max-width:20%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(20%); text-align: left;">
+                                                <div style="display: inline-block; width:190px; max-width:20%; width:-webkit-calc(240px - 100%); min-width:-webkit-calc(190px); width:calc(240px - 100%); min-width:calc(20%); text-align: left;">
                                                     <img width="100%" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1581565129/etape-1/icon-sample.png" alt="">
                                                 </div>
                                         <!--[if mso]>
                                             </td>
                                             <td>
                                         <![endif]-->
-                                                <div style="display: inline-block; width:190px; max-width:75%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(75%); vertical-align: top; padding: 5% 0px; margin-left: 15px;">
+                                                <div style="display: inline-block; width:190px; max-width:70%; width:-webkit-calc(240px - 100%); min-width:-webkit-calc(190px); width:calc(240px - 100%); min-width:calc(70%); vertical-align: top; padding: 5% 0px; margin-left: 15px;">
                                             <!--[if mso]>
                                                     <table cellspacing="0" cellpadding="0" border="0" class="responsive-table" style="margin-left: 2%;">
                                                         <tr>
@@ -288,16 +288,16 @@
                             <td style="padding: 0 10px;" align="center">
                     <![endif]-->
                                 <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(47%); width:calc(480px - 100%); min-width:calc(47%); margin: 5px;">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 5px;">
                                         <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-carte.png"/>
                                     </div>
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(47%); width:calc(480px - 100%); min-width:calc(47%); margin: 5px;">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 5px;">
                                         <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103607/etape-1/mockup-avatar.png"/>
                                     </div>
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(47%); width:calc(480px - 100%); min-width:calc(47%); margin: 5px;">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 5px;">
                                         <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-vetement.png"/>
                                     </div>
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(47%); width:calc(480px - 100%); min-width:calc(47%); margin: 5px;">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 5px;">
                                         <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-sacs.png"/>
                                     </div>
                                 </div>
@@ -308,65 +308,54 @@
                             <td style="padding: 30px 10px 62px;" align="center">
                     <![endif]-->
                                 <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <div style="
-                                        height: 200px;
-                                        background: url('https://res.cloudinary.com/dw1zug8d6/image/upload/v1581565344/etape-1/demo-computer.png');
-                                        background-repeat: no-repeat;
-                                        background-size: contain;
-                                        background-position: right;
-                                        background-size: 100% 90%;
-                                    ">
-                                        <div style="
-                                            text-align: left;
-                                            height: 100%;
-                                            padding: 9.5% 3%;
-                                            box-sizing: border-box;
-                                        ">
-                                            <div style="margin-bottom: 15px;">
-                                                <a href="https://youtu.be/rNTq9aM8qMw" target="_blank">
-                                                    <button href="#" style="
-                                                        min-width: 200px;
-                                                        background: #ef0f0f;
-                                                        line-height: 1.54;
-                                                        margin: 0px;
-                                                        padding: 14px 70px 14px 20px;
-                                                        outline: none;
-                                                        border: none;
-                                                        border-radius: 30px;
-                                                        text-decoration: none;
-                                                        cursor: pointer;
-                                                        text-align: left;
-                                                    ">
-                                                        <img src="https://res.cloudinary.com/deovmejag/image/upload/v1570502938/Artywiz/social-youtube.png" alt="" style="margin-right: 9px;">
-                                                        <span style="text-transform: uppercase; font-family: Roboto; font-size: 13px; font-weight: bold; color: #ffffff;">
-                                                            Voir la démo
-                                                        </span>
-                                                    </button>
-                                                </a>
-                                            </div>
-                                            <div>
-                                                <a href="https://youtu.be/vz5tlov2JxQ" target="_blank">
-                                                    <button href="#" style="
-                                                        min-width: 200px;
-                                                        background: #0073ff;
-                                                        line-height: 1.54;
-                                                        margin: 0px;
-                                                        padding: 14px 18px 14px 20px;
-                                                        outline: none;
-                                                        border: none;
-                                                        border-radius: 30px;
-                                                        text-decoration: none;
-                                                        cursor: pointer;
-                                                        text-align: left;
-                                                    ">
-                                                        <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1581907068/etape-1/document.png" alt="" style="margin-right: 9px; width: 17px; margin-top: -10px;">
-                                                        <span style="text-transform: uppercase; font-family: Roboto; font-size: 13px; font-weight: bold; color: #ffffff;">
-                                                            Télécharger le tuto
-                                                        </span>
-                                                    </button>
-                                                </a>
-                                            </div>
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(560px - 100%); min-width:-webkit-calc(49%); width:calc(560px - 100%); min-width:calc(49%); vertical-align: top; margin: 9% 0;">
+                                        <div style="margin-bottom: 15px;">
+                                            <a href="https://youtu.be/rNTq9aM8qMw" target="_blank">
+                                                <button href="#" style="
+                                                    min-width: 200px;
+                                                    background: #ef0f0f;
+                                                    line-height: 1.54;
+                                                    margin: 0px;
+                                                    padding: 14px 70px 14px 20px;
+                                                    outline: none;
+                                                    border: none;
+                                                    border-radius: 30px;
+                                                    text-decoration: none;
+                                                    cursor: pointer;
+                                                    text-align: left;
+                                                ">
+                                                    <img src="https://res.cloudinary.com/deovmejag/image/upload/v1570502938/Artywiz/social-youtube.png" alt="" style="margin-right: 9px;">
+                                                    <span style="text-transform: uppercase; font-family: Roboto; font-size: 13px; font-weight: bold; color: #ffffff;">
+                                                        Voir la démo
+                                                    </span>
+                                                </button>
+                                            </a>
                                         </div>
+                                        <div>
+                                            <a href="https://youtu.be/vz5tlov2JxQ" target="_blank">
+                                                <button href="#" style="
+                                                    min-width: 200px;
+                                                    background: #0073ff;
+                                                    line-height: 1.54;
+                                                    margin: 0px;
+                                                    padding: 14px 18px 14px 20px;
+                                                    outline: none;
+                                                    border: none;
+                                                    border-radius: 30px;
+                                                    text-decoration: none;
+                                                    cursor: pointer;
+                                                    text-align: left;
+                                                ">
+                                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1581907068/etape-1/document.png" alt="" style="margin-right: 9px; width: 17px; margin-top: -10px;">
+                                                    <span style="text-transform: uppercase; font-family: Roboto; font-size: 13px; font-weight: bold; color: #ffffff;">
+                                                        Télécharger le tuto
+                                                    </span>
+                                                </button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(630px - 100%); min-width:-webkit-calc(49%); width:calc(630px - 100%); min-width:calc(49%);">
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mac-play.png"/>
                                     </div>
                                 </div>
                     <!--[if mso]>
