Improve email (replace text, line cuts, make bigger logo)
Improve email (replace text, line cuts, make bigger logo)

--- a/Artywiz/etape-1-new.html
+++ b/Artywiz/etape-1-new.html
@@ -107,12 +107,12 @@
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif; padding-top: 20px;">
                                     <div style="display: inline-block; width:49%; max-width:49%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(49%); width:calc(480px - 100%); min-width:calc(49%);vertical-align: bottom; padding: 20px 0; text-align: left;">
                                         <a href="https://artywiz.io/" target="_blank">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1581565052/etape-1/logo.png" alt="">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582171269/etape-1/logo.png" alt="">
                                         </a>
                                     </div>
                                     <div style="display: inline-block; width:49%; max-width:49%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(49%); width:calc(480px - 100%); min-width:calc(49%); padding: 10px 0; text-align: right;">
                                         <a href="https://lgef.fff.fr/" target="_blank">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1581565097/etape-1/lgef-logo.png" alt="">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582171269/etape-1/lgef-logo.png" alt="">
                                         </a>
                                     </div>
                                 </div>
@@ -124,7 +124,7 @@
                     <![endif]-->
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <h1 style="font-family: adamcgpro; font-weight: normal; text-align: center;font-size: 24px; color: #419bf9;margin-top: 40px; margin-top: 39px; margin-bottom: 33px;">
-                                        Animez la communication <br> de votre club!
+                                        Animez <br> la communication <br> de votre club!
                                     </h1>
                                 </div>
                                 <div style="text-align:center; font-size:0; background-color: #ffffff; border-radius: 10px;">
@@ -134,11 +134,8 @@
                                 </div>
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
-                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b; margin-bottom: 20px;">
-                                            ARTYWIZ est l’outil gratuit mis à la disposition des clubs par la LGEF pour créer et animer l’ensemble de leur communication. <br>Imprimés, internet, réseaux sociaux, accessoires de sport… <br>tout est prévu pour professionnaliser la communication de votre club et pour valoriser vos équipes et vos sponsors!
-                                        </p>
                                         <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b;">
-                                            N’hésitez plus, rendez-vous sur <a href="https://artywiz.io/" target="_blank" style="color: #419bf9;">Artywiz.io</a>, et n’oubliez pas que nous sommes à votre disposition par email ou par téléphone si vous avez besoin d’aide dans la prise en main d’Artywiz pour votre club.
+                                            ARTYWIZ est l’outil gratuit mis à la disposition des clubs par la LGEF pour créer et animer l’ensemble de leur communication. <br><br>Imprimés, internet, réseaux sociaux, accessoires de sport… tout est prévu pour professionnaliser la communication de votre club et pour valoriser vos équipes et vos sponsors!
                                         </p>
                                     </div>
                                 </div>
@@ -250,7 +247,7 @@
                                             <![endif]-->
                                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(49%); width:calc(480px - 100%); min-width:calc(49%);">
                                                         <p style="font-family: Roboto; font-size: 13px; font-weight: normal; color: #607d8b; margin: 20px 0;">
-                                                            Artywiz <br> <a href="mailto:philipp.seiter@artyplanet.com">philipp.seiter@artyplanet.com</a> <br>tél. +33 607 214 916
+                                                            Artywiz <br> <a href="mailto:philippe.seiter@artyplanet.com">philippe.seiter@artyplanet.com</a> <br>tél. +33 607 214 916
                                                         </p>
                                                     </div>
                                     <!--[if mso]>
@@ -278,7 +275,7 @@
                                 <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/ball.png" alt="" style="width: 100%; margin-bottom: 40px;">
                                     <p style="text-align: left; margin: 0; margin-bottom: 30px; font-family: Roboto; font-size: 15px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; color: #607d8b;">
-                                        ARTYWIZ vous permet de composer votre logo ou de l'importer's'il existe. Une série de documents prêts à l'emploi vous seront automatiquement proposés.
+                                        ARTYWIZ vous permet de composer votre logo ou de l’importer s'il existe. Une série de documents prêts à l'emploi et intégrant votre logo vous seront automatiquement proposés.
                                     </p>
                                 </div>
                     <!--[if mso]>
@@ -355,7 +352,9 @@
                                         </div>
                                     </div>
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(630px - 100%); min-width:-webkit-calc(49%); width:calc(630px - 100%); min-width:calc(49%);">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mac-play.png"/>
+                                        <a href="https://youtu.be/rNTq9aM8qMw" target="_blank">
+                                            <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mac-play.png"/>
+                                        </a>
                                     </div>
                                 </div>
                     <!--[if mso]>
